--- a/README
+++ b/README
@@ -3,7 +3,7 @@ our efforts to the RISC-V version
 (https://github.com/mit-pdos/xv6-riscv.git)
 
 xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
-Version 6 (v6).  xv6 loosely follows the structure and style of v6,
+Version 6 (v6). xv6 loosely follows the structure and style of v6,
 but is implemented for a modern x86-based multiprocessor using ANSI C.
 
 ACKNOWLEDGMENTS
@@ -14,10 +14,10 @@ to Peer Communications; ISBN: 1-57398-013-7; 1st edition (June 14,
 provides pointers to on-line resources for v6.
 
 xv6 borrows code from the following sources:
-    JOS (asm.h, elf.h, mmu.h, bootasm.S, ide.c, console.c, and others)
-    Plan 9 (entryother.S, mp.h, mp.c, lapic.c)
-    FreeBSD (ioapic.c)
-    NetBSD (console.c)
+JOS (asm.h, elf.h, mmu.h, bootasm.S, ide.c, console.c, and others)
+Plan 9 (entryother.S, mp.h, mp.c, lapic.c)
+FreeBSD (ioapic.c)
+NetBSD (console.c)
 
 The following people have made contributions: Russ Cox (context switching,
 locking), Cliff Frey (MP), Xiao Yu (MP), Nickolai Zeldovich, and Austin
@@ -49,3 +49,28 @@ will need to install a cross-compiler gcc suite capable of producing
 x86 ELF binaries (see https://pdos.csail.mit.edu/6.828/).
 Then run "make TOOLPREFIX=i386-jos-elf-". Now install the QEMU PC
 simulator and run "make qemu".
+
+## Guide
+
+This guide below is written by [seolcu](https://github.com/seolcu), not xv6 devs.
+
+### How to compile
+
+To compile xv6 without issue, you need Ubuntu 22.04 environment. If your compiler version does not match, warnings arise and `-Werror` flag cancels the compiliation.
+
+But you don't need to install full Ubuntu 22.04 env if you are already using Linux or macOS, as you can use [Distrobox](https://distrobox.it/).
+
+Install distrobox, and create Ubuntu 22.04 toolbox container with command below:
+
+```bash
+distrobox create -i quay.io/toolbx/ubuntu-toolbox:22.04
+distrobox enter ubuntu-toolbox-22-04
+```
+
+Inside the container, run command below to install essential packages:
+
+```bash
+sudo apt install build-essential qemu-system -y
+```
+
+Now, you can compile xv6 with `make` and run it with `make qemu`.
